# turbosolver-sdk

./: README.md
android-demo/app/: build.gradle  proguard-rules.pro
android-demo/app/src/androidTest/java/me/pepyakin/turbosolver/: ExampleInstrumentedTest.java  TurboSolverInstrumentedTest.java
android-demo/app/src/main/: AndroidManifest.xml
android-demo/app/src/main/java/me/pepyakin/turbosolver/: HttpTurboSolver.kt  JnrTurboSolver.kt  MainActivity.kt  SudokuGen.kt  TurboSolver.kt  TurboSolverApp.kt
android-demo/app/src/main/java/me/pepyakin/turbosolver/capnp/: Api.java  CapnpTurboSolver.kt
android-demo/app/src/main/res/layout/: activity_main.xml
android-demo/app/src/main/res/values/: strings.xml
android-demo/app/src/test/java/me/pepyakin/turbosolver/: ExampleUnitTest.java
android-demo/gradle/wrapper/: gradle-wrapper.properties
common/: Api.java  api.capnp  api_capnp.rs  generate-bindings.sh
libsolver/: Cargo.toml  build.rs
libsolver/src/: api_capnp.rs  bad_sudoku.txt  capnproto.rs  context.rs  error.rs  executor.rs  ffi.rs  http.rs  lib.rs  solver.rs  sudoku.txt  sudoku_solution.txt
