[package]
name = "libsolver"
version = "0.1.0"
authors = ["Sergey Pepyakin <s.pepyakin@gmail.com>"]

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
sudoku = "0.3.2"
error-chain = "0.11.0"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
