[package]
name = "libsolver"
version = "0.1.0"
authors = ["Sergey Pepyakin <s.pepyakin@gmail.com>"]
build = "build.rs"

[lib]
name = "solver"
crate-type = ["staticlib", "cdylib"]

[dependencies]
sudoku = "0.3.2"
error-chain = "0.11.0"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
capnp = "0.8"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }

[build-dependencies]
capnpc = "0.8"
